--- a/index.html
+++ b/index.html
@@ -562,8 +562,8 @@
             .vadya-word { font-size: clamp(4.5rem, 18vw, 6.5rem); letter-spacing: 0.06em; }
             .design-word { font-size: clamp(2.2rem, 10vw, 3.2rem); letter-spacing: 0.12em; transform: translateX(0); text-align: center; }
             /* Уменьшаем интервал между верхним блоком и профилем */
-            .profile { padding: 60px 16px; text-align: left; }
-            .profile-title { font-size: clamp(1.5rem, 5vw, 2.5rem); margin-bottom: 40px; text-align: left; }
+            .profile { padding: 60px 16px; }
+            .profile-title { font-size: clamp(1.5rem, 5vw, 2.5rem); margin-bottom: 40px; text-align: center; }
             .profile-text { text-align: left; margin: 0; }
             .profile-text p { font-size: 1.1rem; text-align: left; margin: 0; }
             .competencies { padding: 140px 16px; }
