--- a/index.html
+++ b/index.html
@@ -563,13 +563,14 @@
             .design-word { font-size: clamp(2.2rem, 10vw, 3.2rem); letter-spacing: 0.12em; transform: translateX(0); text-align: center; }
             /* Уменьшаем интервал между верхним блоком и профилем */
             .profile { padding: 60px 16px; }
-            .profile-title { font-size: clamp(1.5rem, 5vw, 2.5rem); margin-bottom: 40px; text-align: center; }
+            .profile-title { font-size: clamp(2rem, 6vw, 4rem); margin-bottom: 40px; text-align: center; }
             .profile-text { text-align: left; margin: 0; }
             .profile-text p { font-size: 1.1rem; text-align: left; margin: 0; }
             .competencies { padding: 140px 16px; }
             .works-container { padding: 0 16px; }
             .contact { padding: 100px 16px; }
-            .works-grid { grid-template-columns: 1fr; gap: 24px; }
+            .works-grid { grid-template-columns: 1fr; gap: 12px; }
+            .work-item { aspect-ratio: 4/3; }
             .scroll-indicator { height: 3px; }
             /* Мобильная версия: полностью черный фон + гифка сферы, которая двигается при скролле */
             body { 
