величены картинки в блоке ТЫ до полной ширины экрана в мобильной версии

--- a/index.html
+++ b/index.html
@@ -567,10 +567,12 @@
             .profile-text { text-align: left; margin: 0; }
             .profile-text p { font-size: 1.1rem; text-align: left; margin: 0; }
             .competencies { padding: 140px 16px; }
-            .works-container { padding: 0 16px; }
+            .works { padding: 120px 0; }
+            .works-container { padding: 0; }
+            .works-title { padding: 0 16px; }
             .contact { padding: 100px 16px; }
-            .works-grid { grid-template-columns: 1fr; gap: 12px; }
-            .work-item { aspect-ratio: 4/3; }
+            .works-grid { grid-template-columns: 1fr; gap: 12px; padding: 0; }
+            .work-item { aspect-ratio: 4/3; border-radius: 0; }
             .scroll-indicator { height: 3px; }
             /* Мобильная версия: полностью черный фон + гифка сферы, которая двигается при скролле */
             body { 
