--- a/index.html
+++ b/index.html
@@ -568,11 +568,12 @@
             .profile-text p { font-size: 1.1rem; text-align: left; margin: 0; }
             .competencies { padding: 140px 16px; }
             .works { padding: 120px 0; }
-            .works-container { padding: 0; }
+            .works-container { padding: 0; width: 100%; }
             .works-title { padding: 0 16px; }
             .contact { padding: 100px 16px; }
-            .works-grid { grid-template-columns: 1fr; gap: 12px; padding: 0; }
-            .work-item { aspect-ratio: 4/3; border-radius: 0; }
+            .works-grid { grid-template-columns: 1fr; gap: 0; padding: 0; width: 100%; }
+            .work-item { aspect-ratio: 3/2; border-radius: 0; width: 100%; margin: 0; }
+            .work-image { width: 100%; height: 100%; object-fit: cover; }
             .scroll-indicator { height: 3px; }
             /* Мобильная версия: полностью черный фон + гифка сферы, которая двигается при скролле */
             body { 
