--- a/index.html
+++ b/index.html
@@ -567,13 +567,13 @@
             .profile-text { text-align: left; margin: 0; }
             .profile-text p { font-size: 1.1rem; text-align: left; margin: 0; }
             .competencies { padding: 140px 16px; }
-            .works { padding: 120px 0; }
-            .works-container { padding: 0; width: 100%; }
-            .works-title { padding: 0 16px; }
+            .works { padding: 120px 0 !important; }
+            .works-container { padding: 0 !important; width: 100% !important; max-width: 100% !important; margin: 0 !important; }
+            .works-title { padding: 0 16px !important; margin-bottom: 60px !important; }
             .contact { padding: 100px 16px; }
-            .works-grid { grid-template-columns: 1fr; gap: 0; padding: 0; width: 100%; }
-            .work-item { aspect-ratio: 3/2; border-radius: 0; width: 100%; margin: 0; }
-            .work-image { width: 100%; height: 100%; object-fit: cover; }
+            .works-grid { grid-template-columns: 1fr !important; gap: 0 !important; padding: 0 !important; margin: 0 !important; width: 100% !important; }
+            .work-item { aspect-ratio: 3/2 !important; border-radius: 0 !important; width: 100% !important; margin: 0 !important; max-width: 100% !important; }
+            .work-image { width: 100% !important; height: 100% !important; object-fit: cover !important; }
             .scroll-indicator { height: 3px; }
             /* Мобильная версия: полностью черный фон + гифка сферы, которая двигается при скролле */
             body { 
