бран интервал между картинками для  ТЫ и ROYAL HORSE, уменьшен интервал для UPDUTY и GHY в мобильной версии

--- a/index.html
+++ b/index.html
@@ -609,15 +609,18 @@
             /* Стили для модальных галерей в мобильной версии */
             .modal-gallery.gallery-main,
             .modal-gallery.gallery-royalhorse {
-                gap: 4px !important;
+                gap: 0 !important;
                 padding: 20px 0 !important;
             }
             .modal-gallery.gallery-lumiere,
-            .modal-gallery.gallery-ekolife,
-            .modal-gallery.gallery-newproject,
-            .modal-gallery.gallery-project5 {
+            .modal-gallery.gallery-ekolife {
                 gap: 16px !important;
                 padding: 30px 10px !important;
+            }
+            .modal-gallery.gallery-newproject,
+            .modal-gallery.gallery-project5 {
+                gap: 8px !important;
+                padding: 20px 5px !important;
             }
             .modal-gallery.gallery-lumiere .modal-info,
             .modal-gallery.gallery-ekolife .modal-info,
@@ -646,11 +649,14 @@
                 margin: 0 !important;
             }
             .modal-gallery.gallery-lumiere .work-container,
-            .modal-gallery.gallery-ekolife .work-container,
-            .modal-gallery.gallery-newproject .work-container,
-            .modal-gallery.gallery-project5 .work-container {
+            .modal-gallery.gallery-ekolife .work-container {
                 gap: 16px !important;
                 padding: 30px 10px !important;
+            }
+            .modal-gallery.gallery-newproject .work-container,
+            .modal-gallery.gallery-project5 .work-container {
+                gap: 8px !important;
+                padding: 20px 5px !important;
             }
             .contact-minimal { gap: 20px; }
             .contact-row { display: grid; grid-template-columns: 1fr; gap: 12px; padding: 0 16px; }
