аменено After Effects на InDesign во всех версиях сайта

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
                     <p class="competencies-text">Разработка визуальных концепций для различных медиа</p>
                     <p class="competencies-text">Проектирование пользовательских интерфейсов<br>с учетом современных трендов</p>
                     <p class="competencies-text">Брендинг и айдентика с продуманной системой элементов</p>
-                    <p class="competencies-text">Adobe Creative Suite (Photoshop, Illustrator, After Effects)</p>
+                    <p class="competencies-text">Adobe Creative Suite (Photoshop, Illustrator, InDesign)</p>
                     <p class="competencies-text">Figma и инструменты для веб-дизайна</p>
                 </div>
                 <div class="competencies-section">
